{
    "name": "PieceControl",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "6d0930af-3a71-44bf-b07e-d9e2e8018cec",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "5156e68e-820c-4432-8bd0-74bdd5f5867b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap(tapDelay=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "c792fcd2-d2f6-418c-a11c-f9a30bf4cf7c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "2be07c3c-2c90-4438-a56a-bc168f8f9c85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragThePiece",
                    "type": "Button",
                    "id": "3fad4209-63aa-4de9-927f-677b550cff57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "ac36ec4d-7690-406b-b932-786c32e0b48b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "c06a3de3-aa26-4d5d-8b19-ecee7163ccb6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "616de64e-4297-4c72-b6ec-bf8d6693152c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "daa51df7-1c81-4246-bbcd-bc1bd9912d34",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "721c3787-b17c-4d55-88ba-c8dee476e5c8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragThePiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}